# redenote-tools

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 01-project-scope.md  02-technical-decision.md  03-system-architecture.md  04-api-contract.md  05-roadmap.md  06-deployment-baseline.md
docs/openapi/: service.openapi.yaml
service/: README.md  package-lock.json  package.json
service/app/: __init__.py  main.py
service/app/adapters/: __init__.py
service/app/adapters/spider_xhs/: __init__.py  client.py  normalizers.py  signing.py
service/app/api/: dependencies.py
service/app/api/routes/: health.py  rednote.py  storage.py
service/app/config/: __init__.py  settings.py
service/app/core/: __init__.py  exceptions.py  rednote_service.py  responses.py
service/app/models/: __init__.py  common.py  rednote.py  storage.py
service/app/observability/: __init__.py  logging.py
service/app/storage/: __init__.py  sqlite_store.py
service/app/web/: app.js  index.html  styles.css
tests/: README.md
tests/integration/: test_api.py
tests/unit/: test_rednote_service.py
